Prevent an in-use nickname from aborting reconnect

In the event there is only one nickname configured and the connection
times out while waiting for the user to supply a replacement nickname,
the reconnection will now proceed with the existing nickname in the
hope that it will become available.

BUG:330201